Some small clean-ups